--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>counter</title>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-<link rel="stylesheet" href="counter.css">
+<link rel="stylesheet" href="css/counter.css">
 
 </head>
 <body class="body">
@@ -27,6 +27,6 @@
 
     </div>
 
-<script type="text/javascript" src="counter.js"></script>
+<script type="text/javascript" src="js/counter.js"></script>
 </body>
 </html>
