function name, prevent negative num and heading spelling fix

--- a/index.html
+++ b/index.html
@@ -12,16 +12,16 @@
     <div class="main container">
         <div class="row">
             <div class="col-md col-12 col-8 col-6">
-                <form class="frm">
+                <form class="frm form">
 
-                <h1 class="h1">Productivity Couter</h1>
-                <button class="btn btn-primary" type="button" onClick="counter()">Increase</button>
+                <h1 class="h1">Productivity Counter</h1>
+                <button class="btn btn-primary" type="button" onClick="increase()">Increase</button>
                 <button class="btn btn-primary" type="button" onClick="decrease()">Decrease</button>
-                <button class="btn btn-warning" type="button" onClick="zero()">Reset</button>
+                <button class="btn btn-warning" type="button" onClick="resetNum()">Reset</button>
 
-<h2 id='add'>0</h2>
+                <h1 id='add'>0</h1>
 
-</form>
+                </form>
             </div>
         </div>
 
