button width fix

--- a/index.html
+++ b/index.html
@@ -15,9 +15,16 @@
                 <form class="frm form">
 
                 <h1 class="h1">Productivity Counter</h1>
-                <button class="btn btn-primary" type="button" onClick="increase()">Increase</button>
-                <button class="btn btn-primary" type="button" onClick="decrease()">Decrease</button>
-                <button class="btn btn-warning" type="button" onClick="resetNum()">Reset</button>
+                <div class="form-group">
+                    <button class="btn btn-primary" type="button" onClick="increase()">Increase</button>
+                </div>
+                <div class="form-group">
+                    <button class="btn btn-primary" type="button" onClick="decrease()">Decrease</button>
+                </div>
+                <div class="form-group">
+                    <button class="btn btn-warning" type="button" onClick="resetNum()">Reset</button>
+                </div>
+                
 
                 <h1 id='add'>0</h1>
 
