functions and ids modified as well as variables

--- a/index.html
+++ b/index.html
@@ -25,8 +25,9 @@
                     <button class="btn btn-danger glyphicon glyphicon-off" title="click to here to reset it to zero" type="button" onClick="resetNum()"></button>
                 </div>
                
-                     <h1 id='productivityNum'>0</h1>
-                     <hr>  
+                     <h1 id='prod'>0</h1>
+                     <hr>
+                         <p>Your last productivity was : <span id="lastprod">0</span></p>
                 </form>
                 
             </div>
