--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     <button class="btn btn-warning glyphicon glyphicon-minus" title="click once to subtract a number" type="button" onClick="decrease()"></button>
                 </div>
                 <div class="form-group">
-                    <button class="btn btn-danger glyphicon glyphicon-off" title="click to here to reset it to zero" type="button" onClick="resetNum()"></button>
+                    <button class="btn btn-danger glyphicon glyphicon-off" title="click here to reset it to zero" type="button" onClick="resetNum()"></button>
                 </div>
                
                      <h1 id='prod'>0</h1>
